--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -42,6 +42,11 @@
     
 
 }
+/* .button1{
+    .ant-button{
+        border-radius: 45px;
+      }
+} */
 .button1{
     font-size: 15px;
     font-weight: bold;
@@ -51,5 +56,30 @@
     border-radius: 15px;
     padding: 10px;
     margin-left: 10px;
-    color:rgb(18, 17, 15)
+    color:rgb(18, 17, 15);
 }
+
+.layout{
+    background-color: #572d08;
+    height: 15vh;
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    padding: 0.5rem 26rem;
+    color:rgb(214, 219, 194);
+    text-align: center;
+    justify-content: center;
+    display: flex;
+    font-weight: bold;
+}
+/* .Burger{
+    font-size: 15px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    background-color: rgb(153, 90, 31);
+    border-radius: 15px;
+    padding: 10px;
+    margin-left: 400px;
+    color:rgb(18, 17, 15);
+} */
